--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "react": "^18.1.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0"
   },
